# synesthesiapp

./: README.md
rust_monolith/: Cargo.toml
rust_monolith/src/: main.rs
