[package]
name = "rust_monolith"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
urlencoding = "2.1.3"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
actix-web = "4.11.0"
url = "2.5.4"
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
base64 = "0.22.1"

